--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="A app">
+  <title>App</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
