--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="A app" />
-    <title>App</title>
+    <meta
+      name="description"
+      content="Cast torrent files using Google Cast API"
+    />
+    <title>Torrentfilx</title>
   </head>
 
   <body>
